--- a/example/src/index.css
+++ b/example/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.app {
+	width: 400px;
+	padding: 12px;
+	background: rgba(100,100,100, 0.1);
+}
