--- a/example/src/index.css
+++ b/example/src/index.css
@@ -5,7 +5,36 @@ body {
 }
 
 .app {
-	width: 400px;
+	position: relative;
+	display: flex;
+	flex-flow: column;;
 	padding: 12px;
-	background: rgba(100,100,100, 0.1);
+}
+
+.menu-container {
+	position: relative;
+	width: 100%;
+}
+
+.editor {
+	min-width: 400px;
+}
+.editors {
+	display: flex;
+	flex-wrap: wrap;
+}
+.editor-container {
+	min-width: 30%;
+	margin-left: 24px;
+}
+
+.lava-lamp-container {
+	width: 50%;
+	padding: 24px;
+	background: black;
+	margin-left: 24px;
+}
+
+h4 {
+	margin-bottom: 6px;
 }
